--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
        <!--
           Course:  Web Application Development
           Assignment:  Lesson 4 (JavaScript 1)
-          Author:  
-          Date:   
+          Author:  Clayton Kuhlmeier
+          Date:   10-11-17
           Filename: index.html
        -->
        <meta charset="utf-8" />
@@ -64,7 +64,21 @@
                       * HINT:  Use the following variable names:  householdInput, miscellaneousInput, transportationInput
                       *
                       *************************************************************************************************-->
-
+                        <p><label for="householdInput">
+                            Household (grocery, dining out, etc.):
+                            <input type="text" id="householdInput" name="household" />
+                         </label>
+                      </p>
+                      <p><label for="miscellaneousInput">
+                            Miscellaneous (grocery, dining out, etc.):
+                            <input type="text" id="miscellaneousInput" name="miscellaneous" />
+                          </label>
+                      </p>
+                      <p><label for="transportationInput">
+                            Transportation (gas, publictransit, etc.):
+                            <input type="text" id="transportationInput" name="transportation" />
+                          </label>
+                      </p>
                 </fieldset>                 
 
 
