Lesson 4 final commit-2

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                       *
                       *************************************************************************************************-->
                         <p><label for="householdInput">
-                            Household (grocery, dining out, etc.):
+                            Household (utilities, upkeep, etc.):
                             <input type="text" id="householdInput" name="household" />
                          </label>
                       </p>
                       <p><label for="miscellaneousInput">
-                            Miscellaneous (grocery, dining out, etc.):
+                            Miscellaneous (Accessories, Hobbies, etc.):
                             <input type="text" id="miscellaneousInput" name="miscellaneous" />
                           </label>
                       </p>
